--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <!-- TODO: Replace with your paper title -->
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+            <h1 class="title is-1 publication-title">Quality In, Quality Out</h1>
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
               <span class="author-block">
@@ -290,7 +290,7 @@
                     <a href="https://dataqiqo.github.io/" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
-                      <i class="fab fa-github"></i>
+                      <i class="fas fa-file-pdf"></i>
                     </span>
                     <span>Invited Speakers</span>
                   </a>
@@ -301,7 +301,7 @@
                   <a href="https://dataqiqo.github.io/" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                    <i class="ai ai-arxiv"></i>
+                    <i class="fas fa-file-pdf"></i>
                   </span>
                   <span>Sponsor</span>
                 </a>
@@ -324,7 +324,11 @@
         <div class="content has-text-justified">
           <!-- TODO: Replace with your paper abstract -->
           <p>
-            "Data is a precious thing and will last longer than the systems themselves." -- Tim Berners-Lee. In the era of AI, this statement holds more truth than ever before. As machine learning models grow in complexity and capability, the quality of the data they are trained on becomes paramount. This workshop, "Quality In, Quality Out: a Workshop for Data-Centric AI Scientists," aims to bring together researchers, practitioners, and enthusiasts to explore the critical role of data quality in AI development. Our two main towers guide the focus of our workshop. Through a series of talks, panel discussions, and poster presentations, participants will gain insights into best practices for managing and assuring data quality, to best leverage the power of good, clean, targeted data. 
+            "Data is a precious thing and will last longer than the systems themselves." -- Tim Berners-Lee. 
+          </p>
+          <p>
+            In the era of AI, this statement holds more truth than ever before. As machine learning models grow in complexity and capability, the quality of the data they are trained on becomes paramount. This workshop, "Quality In, Quality Out: a Workshop for Data-Centric AI Scientists," aims to bring together researchers, practitioners, and enthusiasts to explore the critical role of data quality in AI development. Our two main towers guide the focus of our workshop: (1) quality in, and (2) quality out. Through a series of talks, panel discussions, and poster presentations, participants will gain insights into best practices for managing and assuring data quality, to best leverage the power of good, clean, targeted data.
+          </p> 
 
             Quality In: understanding and assessing the quality and value of the data used to train AI models. We will discuss methodologies for evaluating data quality, identifying biases, and ensuring representativeness in datasets. 
 
@@ -337,6 +341,43 @@
 </section>
 <!-- End paper abstract -->
 
+<!-- Covered Topics -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3"></h2>
+        <div class="content has-text-justified">
+          <ul>
+            <p><strong>Quality In</strong>: understanding and assessing the quality and value of the data used to train AI models. We will discuss methodologies for evaluating data quality, identifying biases, and ensuring representativeness in datasets. 
+              <ul>
+                <li>Designing new/efficient acquisition functions to assess influence of data</li>
+                <li>Detecting toxic and harmful data</li>
+                <li>Measuring causal effects of data to model outputs</li>
+                <li>Optimizing data mixtures</li>
+                <li>Batch selecting data during training (pre-, mid-, post-)</li>
+                <li>Deduplicating data</li>
+              </ul>
+            </p>
+            
+            <p><strong>Quality Out</strong>: generating data while ensuring the effectiveness of the generated data itself. We will discuss techniques for data augmentation, synthetic data generation, and data cleaning that can enhance the quality of training datasets.
+              <ul>
+                <li>Generating high-quality data/labels</li>
+                <li>Augmenting data/labels</li>
+                <li>Reducing mode collapse/ensuring diversity in generated data</li>
+                <li>Mitigating catastrophic forgetting</li>
+                <li>Building RL-specific data (preference pairs, non-zero advantage, RLVR, reasoning chains, etc.)</li>
+                <li>Developing LLM-as-Judges</li>
+              </ul>
+            </p>
+
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End Covered Topics -->
 
 
 <!--BibTex citation -->
