--- a/index.html
+++ b/index.html
@@ -265,28 +265,30 @@
                     <div class="publication-links">
                          <!-- TODO: Update with your arXiv paper ID -->
                       <span class="link-block">
-                        <a href="https://dataqiqo.github.io/" target="_blank"
+                        <a href="#about" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
-                          <i class="fas fa-file-pdf"></i>
+                          <i class="fas fa-book"></i>
                         </span>
                         <span>About</span>
                       </a>
                     </span>
 
-                    <!-- TODO: Add your supplementary material PDF or remove this section -->
-                    <span class="link-block">
-                      <a href="https://dataqiqo.github.io/" target="_blank"
-                      class="external-link button is-normal is-rounded is-dark">
-                      <span class="icon">
-                        <i class="fas fa-file-pdf"></i>
-                      </span>
-                      <span>Schedule</span>
-                    </a>
-                  </span>
+                   <div class="column has-text-centered">
+                    <div class="publication-links">
+                         <!-- TODO: Update with your arXiv paper ID -->
+                      <span class="link-block">
+                        <a href="#cfp" target="_blank"
+                        class="external-link button is-normal is-rounded is-dark">
+                        <span class="icon">
+                          <i class="fas fa-book"></i>
+                        </span>
+                        <span>CFP</span>
+                      </a>
+                    </span>
 
                   <!-- TODO: Replace with your GitHub repository URL -->
-                  <span class="link-block">
+                  <!-- <span class="link-block">
                     <a href="https://dataqiqo.github.io/" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
@@ -294,10 +296,10 @@
                     </span>
                     <span>Invited Speakers</span>
                   </a>
-                </span>
+                </span> -->
 
                 <!-- TODO: Update with your arXiv paper ID -->
-                <span class="link-block">
+                <!-- <span class="link-block">
                   <a href="https://dataqiqo.github.io/" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -305,7 +307,7 @@
                   </span>
                   <span>Sponsor</span>
                 </a>
-              </span>
+              </span> -->
             </div>
           </div>
         </div>
@@ -323,17 +325,12 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <!-- TODO: Replace with your paper abstract -->
-          <p>
+          <p><i>
             "Data is a precious thing and will last longer than the systems themselves." -- Tim Berners-Lee. 
-          </p>
+          </i></p>
           <p>
             In the era of AI, this statement holds more truth than ever before. As machine learning models grow in complexity and capability, the quality of the data they are trained on becomes paramount. This workshop, "Quality In, Quality Out: a Workshop for Data-Centric AI Scientists," aims to bring together researchers, practitioners, and enthusiasts to explore the critical role of data quality in AI development. Our two main towers guide the focus of our workshop: (1) quality in, and (2) quality out. Through a series of talks, panel discussions, and poster presentations, participants will gain insights into best practices for managing and assuring data quality, to best leverage the power of good, clean, targeted data.
           </p> 
-
-            Quality In: understanding and assessing the quality and value of the data used to train AI models. We will discuss methodologies for evaluating data quality, identifying biases, and ensuring representativeness in datasets. 
-
-            Quality Out: generating data while ensuring the effectiveness of the generated data itself. We will discuss techniques for data augmentation, synthetic data generation, and data cleaning that can enhance the quality of training datasets.
-          </p>
         </div>
       </div>
     </div>
@@ -342,9 +339,29 @@
 <!-- End paper abstract -->
 
 <!-- Covered Topics -->
-<section class="section">
+<section class="section", id="about">
   <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
+    <div class="columns">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3"></h2>
+        <div class="content has-text-justified">
+          <ul>
+            Data-centric AI covers a myriad of topics: data efficiency, selection, augmentation, generation, cleaning, filtering, attribution, etc. Our workshop aims to bring together researchers and practitioners working on all aspects of data-centric AI, for all modalities, and for all models.
+
+            To facilitate focused discussions, we organize the workshop around two main themes: (1) Quality In, and (2) Quality Out. Through this lens, we will explore the best practices, challenges, and innovations in curating high-quality data.
+
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End Covered Topics -->
+
+<!-- Covered Topics -->
+<section class="section", id="cfp">
+  <div class="container is-max-desktop">
+    <div class="columns">
       <div class="column is-four-fifths">
         <h2 class="title is-3"></h2>
         <div class="content has-text-justified">
