--- a/index.html
+++ b/index.html
@@ -288,15 +288,15 @@
                     </span>
 
                   <!-- TODO: Replace with your GitHub repository URL -->
-                  <!-- <span class="link-block">
-                    <a href="https://dataqiqo.github.io/" target="_blank"
+                  <span class="link-block">
+                    <a href="#contact" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
-                    <span>Invited Speakers</span>
+                    <span>Contact</span>
                   </a>
-                </span> -->
+                </span>
 
                 <!-- TODO: Update with your arXiv paper ID -->
                 <!-- <span class="link-block">
@@ -362,10 +362,10 @@
 <section class="section", id="cfp">
   <div class="container is-max-desktop">
     <div class="columns">
-      <div class="column is-four-fifths">
+        <div class="column is-four-fifths">
         <h2 class="title is-3"></h2>
         <div class="content has-text-justified">
-          <ul>
+            <ul>
             <p><strong>Quality In</strong>: understanding and assessing the quality and value of the data used to train AI models. We will discuss methodologies for evaluating data quality, identifying biases, and ensuring representativeness in datasets. 
               <ul>
                 <li>Designing new/efficient acquisition functions to assess influence of data</li>
@@ -379,7 +379,7 @@
             
             <p><strong>Quality Out</strong>: generating data while ensuring the effectiveness of the generated data itself. We will discuss techniques for data augmentation, synthetic data generation, and data cleaning that can enhance the quality of training datasets.
               <ul>
-                <li>Generating high-quality data/labels</li>
+                  <li>Generating high-quality data/labels</li>
                 <li>Augmenting data/labels</li>
                 <li>Reducing mode collapse/ensuring diversity in generated data</li>
                 <li>Mitigating catastrophic forgetting</li>
@@ -387,7 +387,30 @@
                 <li>Developing LLM-as-Judges</li>
               </ul>
             </p>
+            
+        </ul>
+        </div>
+      </div>
+    </div>
+</div>
+</section>
+<!-- End Covered Topics -->
 
+<!-- Covered Topics -->
+<section class="section", id="contact">
+  <div class="container is-max-desktop">
+    <div class="columns">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3"></h2>
+        <div class="content has-text-justified">
+          <ul>
+            <p>
+                If you're interested in keeping up-to-date with the workshop, please sign up for our interest group here: <a href="https://forms.gle/fzbuS9938tMDQ33AA">QIQO Interest Group</a>
+            </p>
+
+            <p>
+                For all other inquiries, please reach out to Ishika Agarwal at: ishikaa2 AT illinois DOT edu.
+            </p>
           </ul>
         </div>
       </div>
@@ -396,19 +419,18 @@
 </section>
 <!-- End Covered Topics -->
 
-
 <!--BibTex citation -->
-  <!-- <section class="section" id="BibTeX">
+<!-- <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
-      <div class="bibtex-header">
+        <div class="bibtex-header">
         <h2 class="title">BibTeX</h2>
         <button class="copy-bibtex-btn" onclick="copyBibTeX()" title="Copy BibTeX to clipboard">
-          <i class="fas fa-copy"></i>
-          <span class="copy-text">Copy</span>
+            <i class="fas fa-copy"></i>
+            <span class="copy-text">Copy</span>
         </button>
-      </div>
+    </div>
       <pre id="bibtex-code"><code>@article{YourPaperKey2024,
-  title={Your Paper Title Here},
+          title={Your Paper Title Here},
   author={First Author and Second Author and Third Author},
   journal={Conference/Journal Name},
   year={2024},
