--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
   <main id="main-content">
   <section class="hero">
     <div class="hero-body">
-      <div class="container is-max-desktop">
+      <div class="container is-centered">
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <!-- TODO: Replace with your paper title -->
@@ -319,7 +319,7 @@
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
-  <div class="container is-max-desktop">
+  <div class="container is-centered">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
@@ -340,7 +340,7 @@
 
 <!-- Covered Topics -->
 <section class="section", id="about">
-  <div class="container is-max-desktop">
+  <div class="container is-centered">
     <div class="columns">
       <div class="column is-four-fifths">
         <h2 class="title is-3"></h2>
@@ -360,7 +360,7 @@
 
 <!-- Covered Topics -->
 <section class="section", id="cfp">
-  <div class="container is-max-desktop">
+  <div class="container is-centered">
     <div class="columns">
         <div class="column is-four-fifths">
         <h2 class="title is-3"></h2>
@@ -398,7 +398,7 @@
 
 <!-- Covered Topics -->
 <section class="section", id="contact">
-  <div class="container is-max-desktop">
+  <div class="container is-centered">
     <div class="columns">
       <div class="column is-four-fifths">
         <h2 class="title is-3"></h2>
@@ -421,7 +421,7 @@
 
 <!--BibTex citation -->
 <!-- <section class="section" id="BibTeX">
-    <div class="container is-max-desktop content">
+    <div class="container is-centered content">
         <div class="bibtex-header">
         <h2 class="title">BibTeX</h2>
         <button class="copy-bibtex-btn" onclick="copyBibTeX()" title="Copy BibTeX to clipboard">
