--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
               <span class="author-block">
-                <a href="https://agarwalishika.github.io/" target="_blank">Ishika Agarwal</a><sup>*</sup>,</span>
+                <a href="https://agarwalishika.github.io/" target="_blank">Ishika Agarwal</a>,</span>
                 <span class="author-block">
-                  <a href="https://vardhandongre.github.io/" target="_blank">Vardhan Dongre</a><sup>*</sup>,</span>
+                  <a href="https://vardhandongre.github.io/" target="_blank">Vardhan Dongre</a>,</span>
                   <span class="author-block">
-                    <a href="https://shuhaibm.github.io/" target="_blank">Shuhaib Mehri</a><sup>*</sup>
+                    <a href="https://shuhaibm.github.io/" target="_blank">Shuhaib Mehri</a>
                   </span>
                   </div>
 
@@ -210,7 +210,7 @@
                     <!-- TODO: Replace with your institution and conference/journal info -->
                     <span class="author-block">ConvAI@UIUC<br>Incoming 2026 Workshop</span>
                     <!-- TODO: Remove this line if no equal contribution -->
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
 
                   <div class="column has-text-centered">
@@ -393,7 +393,7 @@
 <!--End BibTex citation -->
 
 
-  <footer class="footer">
+  <!-- <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-8">
@@ -409,7 +409,7 @@
       </div>
     </div>
   </div>
-</footer>
+</footer> -->
 
 <!-- Statcounter tracking code -->
   
